:pencil2: fix the modal and the z-index Map

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,10 @@
 }
 
 .markercluster-map { height: 150px; width: 315px; border: 2px solid black; border-radius: 4px }
+.
+.leaflet-control { z-index: 0 !important}
+.leaflet-pane { z-index: 0 !important}
+.leaflet-top, .leaflet-bottom {z-index: 0 !important}
 
 @keyframes spinner {
   0% {
